# flowz

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  objects.inv  pylintrc  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docker/files/: celery-executor  celery-executor.j2
docker/files/mapping/: celery-executor.json
docs/: .buildinfo  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: index.doctree
docs/.doctrees/modules/: main.doctree
docs/.doctrees/modules/dagster/: dags.doctree
docs/_sources/modules/: main.rst.txt
docs/docs/: getting-started.md  index.md
docs/docs/cloud-native/: index.md  k8s-shakeout.md
docs/docs/cloud-native/declarative-gitops/: index.md  sealed-secrets.md
docs/docs/installation-modes/celeryexecutor/: architecture.md  build.md  instance-runtime.md
docs/docs/installation-modes/sequentialexecutor/: dag-template.md  dagster-conventions.md  development-environment.md  flowz-conventions.md  instance-runtime.md  test-harness.md
docs/docs/operations/bootstrap/: auth.md
docs/docs/reference/dagster/: connection.md  primer.md  templater.md  user.md  variable.md
docs/docs/reference/flowz/: connection.md  primer.md  templater.md  user.md  variable.md
docs/modules/: main.html
docs/modules/dagster/: dags.html
docsource/: conf.py  index.rst
docsource/modules/dagster/: dags.rst
getting-started/: index.html
installation-modes/celeryexecutor/architecture/: index.html
installation-modes/celeryexecutor/instance-runtime/: index.html
installation-modes/sequentialexecutor/dag-template/: index.html
installation-modes/sequentialexecutor/dagster-conventions/: index.html
installation-modes/sequentialexecutor/development-environment/: index.html
installation-modes/sequentialexecutor/flowz-conventions/: index.html
installation-modes/sequentialexecutor/instance-runtime/: index.html
installation-modes/sequentialexecutor/test-harness/: index.html
makefiles/: airflow-celery.mk  airflow-sequential.mk  container-images.mk  manifests.mk
operations/bootstrap/auth/: index.html
reference/dagster/connection/: index.html
reference/dagster/dags/bootstrap/: index.html
reference/dagster/primer/: index.html
reference/dagster/templater/: index.html
reference/dagster/user/: index.html
reference/dagster/variable/: index.html
reference/flowz/connection/: index.html
reference/flowz/primer/: index.html
reference/flowz/templater/: index.html
reference/flowz/user/: index.html
reference/flowz/variable/: index.html
resources/files/environment/: local
resources/k8s/manifests/: airflow-postgres-vol-persistentvolumeclaim.yaml  init-db-pod.yaml  kustomization.yaml  minio-deployment.yaml  postgres-deployment.yaml  scheduler-deployment.yaml  webserver-deployment.yaml  worker-deployment.yaml
scripts/: add-user.py
search/: search_index.json
src/dagster/: VERSION  __init__.py  __main__.py  alerter.py  api.py  connection.py  decorators.py  primer.py  task.py  templater.py  user.py  variable.py
src/dagster/common/: task.py
src/dagster/config/: logging.py
src/dagster/dags/: bootstrap.py  template.py
src/dagster/datastore/: spark.py
src/dagster/schema/: dummy.py
src/dagster/security/: __init__.py  ad_user.py  utils.py  wmsecuritymanager.py
src/dagster/utils/: alerter.py  dagprimer.py  dates.py  lazy.py  templater.py
src/flowz/: VERSION  __init__.py  __main__.py  alerter.py  api.py  connection.py  user.py  variable.py
src/flowz/dags/: bootstrap.py  template.py
src/flowz/datastore/: spark.py
src/flowz/schema/: dummy.py
tests/: .coveragerc  conftest.py  test_api.py  test_connection.py  test_user.py  test_variable.py
tests/dags/: conftest.py  test_bootstrap.py  test_dags.py  test_parameterised_operator.py
tests/dagster/: conftest.py  dataframes.py  test_alerter.py  test_api.py  test_connection.py  test_primer.py  test_templater.py  test_user.py  test_variable.py
tests/dagster/dags/: conftest.py  test_bootstrap.py  test_dags.py  test_parameterised_operator.py
tests/dagster/datastore/: test_spark.py
tests/files/templates/: dag_variables.json.j2  task_variables.json.j2
tests/flowz/: conftest.py  dataframes.py  test_alerter.py  test_api.py  test_connection.py  test_primer.py  test_templater.py  test_user.py  test_variable.py
tests/flowz/dags/: conftest.py  test_bootstrap.py  test_parameterised_operator.py
tests/flowz/datastore/: test_spark.py
tests/plugins/hooks/: test_local_spark_context_hook.py
tests/plugins/operators/: test_diffit_operator.py  test_do_nothing_operator.py
tests/security/: test_ad_user.py  test_utils.py  test_wmsecuritymanager.py
tests/utils/: test_alerter.py  test_dagprimer.py  test_dates.py  test_lazy.py  test_templater.py
(+54 files in other folders)
