[metadata]
name = dagster
version = file: src/dagster/VERSION
description = Diff-it: Spark Dataframe Differ
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/loum/dagster
author = Lou Markovski
author_email = lou.markovski@gmail.com
license = MIT
license_files = LICENSE.md
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3

[options]
python_requires = >=3
packages = find:
package_dir =
    =src
install_requires =
    dagsesh @ git+https://github.com/loum/dagsesh.git@main
    diffit @ git+https://github.com/loum/diffit.git@0.1.5
    filester
    msal
    pyspark==3.*

[options.extras_require]
dev =
    Sphinx
    apache-airflow==2.4.*
    pytest
    pytest-cov
    pytest-sugar
    sphinx-adc-theme
    twine

[options.packages.find]
where = src

[options.package_data]
dagster =
    VERSION
    config/connections/*.json
    config/dags/*.j2
    config/tasks/*.j2
    config/templates/*.j2
    config/templates/webserver/*.j2
    dags/.airflowignore

[options.entry_points]
console_scripts =
    dagster = dagster.__main__:main
