[metadata]
name = dagster
version = file: src/dagster/VERSION
description = Diff-it: Spark Dataframe Differ
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/loum/dagster
author = Lou Markovski
author_email = lou.markovski@gmail.com
license = MIT
license_files = LICENSE.md
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3

[options]
python_requires = >=3
packages = find:
package_dir =
    =src
install_requires =
    dagsesh
    filester
    pyspark==3.*
    pytz

[options.extras_require]
dev =
    apache-airflow==2.4.*
    mkdocstrings-python
    pytest
    pytest-cov
    pytest-sugar
    sqlalchemy2-stubs
    types-pytz
    twine

[options.packages.find]
where = src

[options.package_data]
dagster =
    VERSION
    config/connections/*.json
    config/dags/*.j2
    config/tasks/*.j2
    config/templates/*.j2
    config/templates/webserver/*.j2
    dags/.airflowignore

[options.entry_points]
console_scripts =
    dagster = dagster.__main__:main
